# entech_test

./: README.md  docker-compose.yml  task2.py
backend/: Dockerfile  pyproject.toml
backend/animals/: admin.py  serializers.py  urls.py  views.py
backend/animals/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: Dockerfile  README.md
frontend/src/: App.js
