[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Animal Farm Management"
authors = ["Yerzhan Bissaliyev <bissaliyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
django-filter = "^23.3"
markdown = "^3.5.1"
drf-yasg = "^1.21.7"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
